# harness

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: reviewer.md
commands/: harness.md
docs/: QUICKSTART.md
hooks/: hooks.json
server/: __init__.py  evaluator.py  models.py  orchestrator.py  rules.py  server.py  session_manager.py  sop_registry.py  usage_tracker.py  validation.py
skills/orchestrate/: SKILL.md
sops/: _TEMPLATE.yaml  code-review.yaml  feature-dev.yaml  investigation.yaml
tests/: manual_test.py  test_e2e.py  test_evaluator.py  test_orchestrator.py  test_p2_features.py  test_session_manager.py  test_sop_registry.py  test_validation.py
